examples/test/testpolicy7865.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7865
  namespace: namespace5
spec:
  podSelector:
    matchLabels:
      key43: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value42
          key29: value21
      podSelector:
        matchLabels:
          key20: value2
          key36: value32
